// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not output jsx if no expense passed 1`] = `""`;

exports[`should not pluralise expense with only one expense 1`] = `
<div>
  <p>
    Viewing 
    1
      expense
      totaling £
    1.95
  </p>
</div>
`;

exports[`should pluralise expense with more than one expense 1`] = `
<div>
  <p>
    Viewing 
    3
      expense
    s
      totaling £
    1,141.95
  </p>
</div>
`;
